--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
 body {
 	font-family: 'Lato', arial, sans-serif;
-	color: #434343;
-	background: #DAE3E7;
+	color: rgb(201, 202, 204);
+	background: rgb(29, 31, 33);
 	font-size: 16px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -109,8 +109,6 @@ a.dotted-link:hover {
 
 .header {
 	padding: 30px 0;
-	background: #f5f5f5;
-	border-top: 10px solid #778492;
 }
 
 .header .btn {
@@ -174,8 +172,7 @@ a.dotted-link:hover {
 }
 
 .section .section-inner {
-	background: #fff;
-	padding: 30px;
+	padding: 10px;
 }
 
 .section .heading {
@@ -439,7 +436,6 @@ a.dotted-link:hover {
 }
 
 .footer {
-	background: #32383e;
 	color: #fff;
 	padding: 10px 0;
 }
