--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -121,7 +121,7 @@ a.dotted-link:hover {
 }
 
 .header .profile-content .name {
-	color: #49515a;
+	color: rgb(255,255,255);
 	font-size: 38px;
 	margin-bottom: 5px;
 	margin-top: 30px;
@@ -177,8 +177,8 @@ a.dotted-link:hover {
 
 .section .heading {
 	margin-top: 0;
-	margin-bottom: 30px;
-	color: #545e69;
+	margin-bottom: 10px; 
+	color: rgb(255,255,255);
 	font-size: 24px;
 }
 
@@ -500,7 +500,6 @@ a.dotted-link:hover {
 .footer {
 	padding: 20px;
 	text-align: center;
-	background: #ddd;
 	margin-top: 20px;
 }
 
